# Mesher

./: .dockerignore  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Electrodes.txt  LICENSE.txt  Matlab_save.h  Mesher_plus.cpp  Mesher_plus_Rat.cpp  README.md  Sizing_fields.h  catch_tests.sh  input_idx.txt  input_parameters.h  input_planar.txt  list_of_deformations.txt  run_mesher.sh  test_mesher.sh
Kirill/: Display_Mesh.m  MRImesh.mat  MRIperturbation.mat  find_perturbation.m  input.txt  readCGAL.m
Kirill/Mesher/: input.txt
Kirill/config/: input.txt
Kirill/doc/: Manual.docx
Kirill/resources/data/: input.inr
Kirill/src/matlab/: Display_Mesh.m  readCGAL.m
MATLAB/: getmesherparam.m  loadmesh.m  readme.md  readmesh.m  runmesher.m  saveinr_EIT.m  stl2inr.m  writemesherparam.m
Markus/Exec/: Electrode coordinates take 2.txt  electrodes_human.txt  input_elliptic_electrodes.txt
Markus/Src/: CMakeCache.txt  CMakeLists.txt  Matlab_save.h  Mesher_plus_Human.cpp  Mesher_plus_Human.sln  Mesher_plus_Human.vcxproj  Mesher_plus_Human_EEG31.cpp  Mesher_plus_Human_Electrodes.sln  Mesher_plus_Human_Electrodes.vcxproj  Mesher_plus_Rat.cpp  Mesher_plus_x64.sln  Sizing_fields.h  input_parameters.h  mesher_plus_rat.sln  mesher_plus_rat.vcxproj
Markus/system/: libmat.lib  libmx.lib
cmake/: FindMATLAB.cmake
doc/: CMakeLists.txt  Doxyfile.in
examples/: readme.md  run_examples.sh  runexamples.m
examples/EIDORS/: NN2016_Prt_full.txt  NNEIDORS_param.txt  eidors_example.m  readme.md
examples/PEITS/: NNPEITS_param.txt  parameter  readme.md  standardparamsNN
examples/PEITS/output/: readme.md
examples/SuperSolver/: NNSS_param.txt  readme.md  supersolver_example.m
examples/SuperSolver/output/: readme.md
examples/brain/: Brain.inr  Brain_elec.txt  Brain_params.txt  Brain_params_HR.txt  Brain_seg.mat  Electrodes.txt  a.m  brain_params.txt  example_brain.m  input.inr  input_idx.txt  readme.md
examples/brain/output/: brainexample.dgf  readme.md  (+3 more)
examples/deformation/: deformation_params.txt  readme.md
examples/neonatescalp/: .gitignore  NNelecposorig.txt  NNscalp.STL  NNscalp.inr  NNscalp_param.txt  NNscalp_param_HR.txt  NNskull_lowpoly.STL  example_neonate.m  readme.md
examples/refinements/: Elecs.txt  Input.inr  Params_0.txt  Params_1.txt  Params_2.txt  Params_3.txt  Params_4.txt  Params_5.txt  readme.md
examples/solvers/: readme.md
examples/toast/: Params_Toast.txt  mesher2toast.m  readme.md
examples/unitcube/: Params_0.txt  Params_1.txt  electrodes.txt  examplescube.m  input_idx.txt  readme.md  unit_cube.inr
include/: Sizing_fields.h  input_parameters.h
inputs/: Mesh.mat  input_idx.txt  mesher_rat
src/: CGAL_include.h  CMakeLists.txt  Matlab_save.h  Mesher_plus.cpp  Mesher_plus_Rat.cpp  Sizing_fields.cpp  Sizing_fields.h  deform_volume.cpp  deform_volume.h  from_matlab.cpp  from_matlab.h  include.h  input_parameters.cpp  input_parameters.h  mesh_operations.cpp  mesh_operations.h  mesh_stretcher.cpp  mesh_stretcher.h  mesher.cpp  save_dgf.cpp  save_dgf.h  stretch_info.cpp  stretch_info.h  test_warping.cpp  warp_mesh.cpp  warp_mesh.h  write_c3t3_to_vtk_xml_file.h
src/MATLAB/: dilate_mesh_layer.m  matrix_deform_mesh.m  rotate_electrodes.m  view_layers.m
test/: CMakeLists.txt  input_idx.txt  list_of_deformations.txt  test_mesh_operations.cpp  test_sizing_field.cpp  test_stretching.cpp  test_warping.cpp  unit_cube_2_domains.inr
(+52 files in other folders)
